<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Yosef Saputra
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Warble</string>

    <string name="title_activity_main">MainActivity</string>

    <!--Welcome Page-->
    <string name="title_welcomePage">Welcome to</string>
    <string name="orLabel_welcomePage">OR</string>
    <string name="sendButton_welcomePage">GO</string>
    <string name="usernameHint_welcomePage">enter your username</string>
    <string name="newUsernameHint_welcomePage">enter new username</string>
    <string name="authenticationUnsuccessful_welcomePage">Authentication is unsuccessful</string>
    <string name="duplicateUsername_welcomePage">Username already exists. Try another</string>
    <string name="newUsernameInserted_welcomePage">New username is successfully accepted</string>
    <string name="invalidUsername_welcomePage">Please enter a valid username</string>
    <string name="invalidPassword_welcomePage">Please enter a valid password</string>

    <!--Main Page-->
    <string name="fragmentLabelSetup_mainPage">Setup</string>
    <string name="fragmentLabelManual_mainPage">Manual</string>
    <string name="fragmentLabelControl_mainPage">Control</string>
    <string name="fragmentLabel4_mainPage">4</string>
    <string name="fragmentLabelSettings_mainPage">Settings</string>

    <!--Add Bridge Page -->
    <string name="titleFindBridge_addBridgePage">Find Bridge</string>
    <string name="titleBridgeType_addBridgePage">Bridge Type</string>
    <string name="titleIpAddress_addBridgePage">IP Address</string>
    <string name="ipAddressLabel_addBridgePage">enter IP address</string>

    <!--Add Light Page-->
    <string name="titleFindLight_addLightPage">Find Light</string>
    <string name="titleLightType_addLightPage">Light Type</string>
    <string name="titleParentBridge_addLightPage">Parent Bridge</string>
    <string name="titleSerialNumber_addLightPage">Serial Number</string>
    <string name="serialNumberLabel_addBridgePage">enter serial number</string>

    <!--Philips Hue Bridge Press Button Page-->
    <string name="title_philipsHueBridgePressPage">Philips Hue Bridge</string>
    <string name="message_philipsHueBridgePressPage">Follow these steps:\n- Press button at the Philips Hue Bridge\n- Enter username\n- Press submit button</string>
    <string name="usernameHint_philipsHueBridgePressPage">type username</string>
    <string name="submitButton_philipsHueBridgePressPage">Submit</string>

    <!--Control Fragment-->
    <string name="lightSwitch_controlFragment">Light</string>

    <!--Settings Fragment-->
    <string name="userSection_settingsFragment">User</string>
    <string name="logout_settingsFragment">Log Out</string>
    <string name="debugSection_settingsFragment">Debug</string>
    <string name="dbPrint_settingsFragment">Print Database</string>
    <string name="dbReset_settingsFragment">Reset Database</string>
    <string name="dbIntHistReset_settingsFragment">Int Hist Reset Database</string>

    <!--Thing Activity-->
    <string name="name_thingActivity">Name : </string>
    <string name="friendlyName_thingActivity">Friendly Name : </string>
    <string name="uuid_thingActivity">UUID : </string>
    <string name="thingTypes_thingActivity">Thing Types : </string>
    <string name="concreteTypes_thingActivity">Concrete Types : </string>
    <string name="location_thingActivity">Location : </string>
    <string name="accessName_thingActivity">Access Name : </string>
    <string name="accessUsername_thingActivity">Access Username : </string>
    <string name="accessPasscode_thingActivity">Access Passcode : </string>
    <string name="manufacturerSerialNumber_thingActivity">Manufacturer Serial Number : </string>
    <string name="manufacturerModelName_thingActivity">Manufacturer Model Name : </string>
    <string name="manufacturerModelNumber_thingActivity">Manufacturer Model Number : </string>
    <string name="manufacturerName_thingActivity">Manufacturer Name : </string>
    <string name="connections_thingActivity">Connections : </string>
    <string name="discoveries_thingActivity">Discoveries : </string>
    <string name="isCredentialRequired_thingActivity">Credential Required : </string>
    <string name="credentials_thingActivity">Credentials : </string>
    <string name="addCredential_thingActivity">+</string>
    <string name="dbid_thingActivity">DBID : </string>

    <!--Add ThingAccessCredential UsernamePasswordCredential-->
    <string name="username_addUsernamePasswordCredentialActivity">Username</string>
    <string name="password_addUsernamePasswordCredentialActivity">Password</string>
    <string name="submit_addUsernamePasswordCredentialActivity">Submit</string>
    <string name="pressThingButton_addUsernamePasswordCredentialActivity">Press button on the thing</string>
    <string name="donePressThingButton_addUsernamePasswordCredentialActivity">I have pressed it</string>

</resources>
