<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.WelcomeActivity">

    <TextView
        android:id="@+id/title_welcomePage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_welcomePage"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_welcomePage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcomePage_textView" />

    <TextView
        android:id="@+id/newUsernameLabel_WelcomePage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/orLabel_welcomePage"
        app:layout_constraintBottom_toTopOf="@+id/newUsername_welcomePage_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_welcomePage_editText"
        style="@style/AppTheme.Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/usernameHint_welcomePage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/newUsernameLabel_WelcomePage_textView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/usernameSend_welcomePage_button"
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sendButton_welcomePage"
        app:layout_constraintBottom_toTopOf="@+id/newUsernameLabel_WelcomePage_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_welcomePage_editText" />

    <EditText
        android:id="@+id/newUsername_welcomePage_editText"
        style="@style/AppTheme.Widget.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/newUsernameHint_welcomePage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newUsernameSend_welcomePage_button"
        style="@style/AppTheme.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sendButton_welcomePage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newUsername_welcomePage_editText" />

</android.support.constraint.ConstraintLayout>