<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="5dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_thingActivity" />

                <TextView
                    android:id="@+id/name_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/nameLabel_thingActivity_textView" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/friendlyNameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friendlyName_thingActivity" />

                <TextView
                    android:id="@+id/friendlyName_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/friendlyNameLabel_thingActivity_textView" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/uuidLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uuid_thingActivity" />

                <TextView
                    android:id="@+id/uuid_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/uuidLabel_thingActivity_textView" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/thingTypesLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thingTypes_thingActivity" />

                <TextView
                    android:id="@+id/thingTypes_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/thingTypesLabel_thingActivity_textView" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/concreteTypesLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/concreteTypes_thingActivity" />

                <TextView
                    android:id="@+id/concreteTypes_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/concreteTypesLabel_thingActivity_textView" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/accessNameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessName_thingActivity" />

                <TextView
                    android:id="@+id/accessName_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/accessNameLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/accessUsernameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessUsername_thingActivity" />

                <TextView
                    android:id="@+id/accessUsername_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/accessUsernameLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/accessPasscodeLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessPasscode_thingActivity" />

                <TextView
                    android:id="@+id/accessPasscode_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/accessPasscodeLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/manufacturerSerialNumberLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturerSerialNumber_thingActivity" />

                <TextView
                    android:id="@+id/manufacturerSerialNumber_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/manufacturerSerialNumberLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/manufacturerModelNameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturerModelName_thingActivity" />

                <TextView
                    android:id="@+id/manufacturerModelName_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/manufacturerModelNameLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/manufacturerModelNumberLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturerModelNumber_thingActivity" />

                <TextView
                    android:id="@+id/manufacturerModelNumber_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/manufacturerModelNumberLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/manufacturerNameLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturerName_thingActivity" />

                <TextView
                    android:id="@+id/manufacturerName_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/manufacturerNameLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/connectionsLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connections_thingActivity" />

                <TextView
                    android:id="@+id/connections_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/connectionsLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/discoveriesLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discoveries_thingActivity" />

                <TextView
                    android:id="@+id/discoveries_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/discoveriesLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/isCredentialRequiredLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isCredentialRequired_thingActivity" />

                <TextView
                    android:id="@+id/isCredentialRequired_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/isCredentialRequiredLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/credentialsLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credentials_thingActivity" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/thingCredential_recyclerView"
                    android:layout_width="358dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/credentialsLabel_thingActivity_textView" />

                <TextView
                    android:id="@+id/addCredential_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/addCredential_thingActivity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dbidLabel_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dbid_thingActivity" />

                <TextView
                    android:id="@+id/dbid_thingActivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/dbidLabel_thingActivity_textView" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/thingActivity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

</android.support.constraint.ConstraintLayout>